Fixed: get link icon misalignment, get link not working, get link -> manage link text.

--- a/css/icons.css
+++ b/css/icons.css
@@ -274,7 +274,7 @@
 .dropdown-item .small-icon.icons-sprite.chain {
     width: 22px;
     background-position: -200px -133px;
-    margin: 0 8px 1px -1px;
+    margin: 6px 8px 1px -1px;
 }
 .dropdown-item .small-icon.writing-pen {
     background-position: -3px -347px;
